	  unjustified text to use the partitioning code, as it greatly
	  simplifies how they work, and to store such text in its own
	  buffer rather than the cutbuffer.  Changes to backup_lines(),
	  do_justify(), etc. (DLR)
- cut.c:
  do_cut_text()
	- If keep_cutbuffer is FALSE, only blow away the text in the
	  cutbuffer if the cutbuffer isn't empty. (DLR)
- global.c:
  shortcut_init()
	- Fix misplaced #endif keeping the "Full Justify" shortcut in
	  the search shortcut list from being included when NANO_SMALL
	  is defined but DISABLE_JUSTIFY isn't. (DLR)
  thanks_for_all_the_fish()
	- Free the justify buffer if it isn't empty. (DLR)
- nano.c:
  handle_sigwinch()
	- If the justify buffer isn't empty, blow it away and don't
	  display "UnJustify" in the shortcut list anymore. (DLR)
  do_wrap()
	- Make wrap_loc and word_back ssize_t's, to match fill. (DLR)
  do_justify()
	- For consistency, preserve placewewant if we didn't unjustify
	  instead of setting it to 0. (DLR)

GNU nano 1.3.5 - 2004.11.22
- General:
	- Convert more ints that hold only TRUE and FALSE values to
	  bools. (DLR)
	- Consolidate the code for finding and running a shortcut in a
	  shortcut list, the code for finding and toggling a toggle in a
	  toggle list, and the code for doing both of those and
	  interpreting mouse clicks in the edit window.  Also move the
	  code for do_mouse() to get_edit_mouse() and tweak it to
	  properly handle cases where a shortcut isn't clicked.  New
	  functions get_shortcut(), get_toggle(), get_edit_input(), and
	  get_edit_mouse(); changes to do_browser(), do_justify(),
	  do_help(), and main(). (DLR)
	- Simplify a few more translated messages. (DLR)
	- Translation updates (see po/ChangeLog for details).
	- Remove reference to @includedir@ in src/Makefile.am, as it's
	  unneeded and can break cross-compilation. (DLR, found by Mike
	  Frysinger)
	- Overhaul the file opening, reading, and loading operations to
	  increase efficiency, avoid problems on invalid filenames